umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_4H-pyran.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "O#n2#v2" "1" "C#h#v3" "2" "C#h#v3" "3" "C#h2#v2" "4" "C#h#v3" "5" "C#h#v3"} :bonds [["0" "1" "1"] ["1" "2" "2"] ["2" "3" "1"] ["3" "4" "1"] ["4" "5" "2"] ["5" "0" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "O#n2#v2" "1" "C#h#v3" "2" "C#h#v3" "3" "C#h2#v2" "4" "C#h#v3" "5" "C#h#v3"} :bonds [["0" "1" "1"] ["1" "2" "2"] ["2" "3" "1"] ["3" "4" "1"] ["4" "5" "2"] ["5" "0" "1"]] :charge 0 :spin "#u0 #s1"}}}
