umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@heterocycles_5_fused_phthalocyanine.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {
      :aromatic-systems [
        {
          :atoms [
            0
            1
            2
            3
            4
            5
            6
            7
            8
            9
            10
            11
            12
            13
            14
            15
            16
            17
            18
            19
            20
            21
            22
            23
            24
            25
            26
            27
            28
            29
            30
            31
            32
            33
            34
            35
            36
            37
            38
            39]
          :attrs "[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,2,1,1,1,1,1,1,1,1,1,1,1,1,2,1,1,1,1,1,1]"}]
      :atoms [
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "C#h"
        "C"
        "N#n"
        "C"
        "N#n"
        "C"
        "N#n"
        "C"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "N#h"
        "N#n"
        "C"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "N#n"
        "N#n"
        "C"
        "N#h"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 32 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 33 :single]
        [6 7 :single]
        [7 8 :single]
        [8 39 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 20 :single]
        [12 13 :single]
        [13 18 :single]
        [13 14 :single]
        [14 15 :single]
        [15 16 :single]
        [16 17 :single]
        [17 18 :single]
        [18 19 :single]
        [19 20 :single]
        [19 21 :single]
        [21 22 :single]
        [22 30 :single]
        [22 23 :single]
        [23 28 :single]
        [23 24 :single]
        [24 25 :single]
        [25 26 :single]
        [26 27 :single]
        [27 28 :single]
        [28 29 :single]
        [29 30 :single]
        [29 31 :single]
        [31 32 :single]
        [32 33 :single]
        [10 34 :single]
        [34 39 :single]
        [34 35 :single]
        [35 36 :single]
        [36 37 :single]
        [37 38 :single]
        [38 39 :single]]}
    :success true
    :tie-breaks [
      0
      1
      2
      3
      4
      5
      6
      7
      8
      9
      10
      11
      12
      13
      14
      15
      16
      17
      18
      19
      20
      21
      22
      23
      24
      25
      26
      27
      28
      29
      30
      31
      32
      33
      34
      35
      36
      37
      38
      39]}
  :atom-typing-strict {
    :output {
      :aromatic-systems [
        {
          :atoms [
            0
            1
            2
            3
            4
            5
            6
            7
            8
            9
            10
            11
            12
            13
            14
            15
            16
            17
            18
            19
            20
            21
            22
            23
            24
            25
            26
            27
            28
            29
            30
            31
            32
            33
            34
            35
            36
            37
            38
            39]
          :attrs "[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,2,1,1,1,1,1,1,1,1,1,1,1,1,2,1,1,1,1,1,1]"}]
      :atoms [
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "C#h"
        "C"
        "N#n"
        "C"
        "N#n"
        "C"
        "N#n"
        "C"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "N#h"
        "N#n"
        "C"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "N#n"
        "N#n"
        "C"
        "N#h"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 32 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 33 :single]
        [6 7 :single]
        [7 8 :single]
        [8 39 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 20 :single]
        [12 13 :single]
        [13 18 :single]
        [13 14 :single]
        [14 15 :single]
        [15 16 :single]
        [16 17 :single]
        [17 18 :single]
        [18 19 :single]
        [19 20 :single]
        [19 21 :single]
        [21 22 :single]
        [22 30 :single]
        [22 23 :single]
        [23 28 :single]
        [23 24 :single]
        [24 25 :single]
        [25 26 :single]
        [26 27 :single]
        [27 28 :single]
        [28 29 :single]
        [29 30 :single]
        [29 31 :single]
        [31 32 :single]
        [32 33 :single]
        [10 34 :single]
        [34 39 :single]
        [34 35 :single]
        [35 36 :single]
        [36 37 :single]
        [37 38 :single]
        [38 39 :single]]}
    :success true
    :tie-breaks [
      0
      1
      2
      3
      4
      5
      6
      7
      8
      9
      10
      11
      12
      13
      14
      15
      16
      17
      18
      19
      20
      21
      22
      23
      24
      25
      26
      27
      28
      29
      30
      31
      32
      33
      34
      35
      36
      37
      38
      39]}
  :counts-most-saturated {
    :output {
      :aromatic-systems [
        {
          :atoms [
            0
            1
            2
            3
            4
            5
            6
            7
            8
            9
            10
            11
            12
            13
            14
            15
            16
            17
            18
            19
            20
            21
            22
            23
            24
            25
            26
            27
            28
            29
            30
            31
            32
            33
            34
            35
            36
            37
            38
            39]
          :attrs "[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,2,1,1,1,1,1,1,1,1,1,1,1,1,2,1,1,1,1,1,1]"}]
      :atoms [
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "C#h"
        "C"
        "N#n"
        "C"
        "N#n"
        "C"
        "N#n"
        "C"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "N#h"
        "N#n"
        "C"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "N#n"
        "N#n"
        "C"
        "N#h"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 32 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 33 :single]
        [6 7 :single]
        [7 8 :single]
        [8 39 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 20 :single]
        [12 13 :single]
        [13 18 :single]
        [13 14 :single]
        [14 15 :single]
        [15 16 :single]
        [16 17 :single]
        [17 18 :single]
        [18 19 :single]
        [19 20 :single]
        [19 21 :single]
        [21 22 :single]
        [22 30 :single]
        [22 23 :single]
        [23 28 :single]
        [23 24 :single]
        [24 25 :single]
        [25 26 :single]
        [26 27 :single]
        [27 28 :single]
        [28 29 :single]
        [29 30 :single]
        [29 31 :single]
        [31 32 :single]
        [32 33 :single]
        [10 34 :single]
        [34 39 :single]
        [34 35 :single]
        [35 36 :single]
        [36 37 :single]
        [37 38 :single]
        [38 39 :single]]}
    :success true
    :tie-breaks [
      0
      1
      2
      3
      4
      5
      6
      7
      8
      9
      10
      11
      12
      13
      14
      15
      16
      17
      18
      19
      20
      21
      22
      23
      24
      25
      26
      27
      28
      29
      30
      31
      32
      33
      34
      35
      36
      37
      38
      39]}
  :counts-strict {
    :output {
      :aromatic-systems [
        {
          :atoms [
            0
            1
            2
            3
            4
            5
            6
            7
            8
            9
            10
            11
            12
            13
            14
            15
            16
            17
            18
            19
            20
            21
            22
            23
            24
            25
            26
            27
            28
            29
            30
            31
            32
            33
            34
            35
            36
            37
            38
            39]
          :attrs "[1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,2,1,1,1,1,1,1,1,1,1,1,1,1,2,1,1,1,1,1,1]"}]
      :atoms [
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "C#h"
        "C"
        "N#n"
        "C"
        "N#n"
        "C"
        "N#n"
        "C"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "N#h"
        "N#n"
        "C"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"
        "C"
        "N#n"
        "N#n"
        "C"
        "N#h"
        "C"
        "C#h"
        "C#h"
        "C#h"
        "C#h"
        "C"]
      :bonds [
        [0 5 :single]
        [0 1 :single]
        [1 2 :single]
        [2 3 :single]
        [3 32 :single]
        [3 4 :single]
        [4 5 :single]
        [4 6 :single]
        [6 33 :single]
        [6 7 :single]
        [7 8 :single]
        [8 39 :single]
        [8 9 :single]
        [9 10 :single]
        [10 11 :single]
        [11 12 :single]
        [12 20 :single]
        [12 13 :single]
        [13 18 :single]
        [13 14 :single]
        [14 15 :single]
        [15 16 :single]
        [16 17 :single]
        [17 18 :single]
        [18 19 :single]
        [19 20 :single]
        [19 21 :single]
        [21 22 :single]
        [22 30 :single]
        [22 23 :single]
        [23 28 :single]
        [23 24 :single]
        [24 25 :single]
        [25 26 :single]
        [26 27 :single]
        [27 28 :single]
        [28 29 :single]
        [29 30 :single]
        [29 31 :single]
        [31 32 :single]
        [32 33 :single]
        [10 34 :single]
        [34 39 :single]
        [34 35 :single]
        [35 36 :single]
        [36 37 :single]
        [37 38 :single]
        [38 39 :single]]}
    :success true
    :tie-breaks [
      0
      1
      2
      3
      4
      5
      6
      7
      8
      9
      10
      11
      12
      13
      14
      15
      16
      17
      18
      19
      20
      21
      22
      23
      24
      25
      26
      27
      28
      29
      30
      31
      32
      33
      34
      35
      36
      37
      38
      39]}}
